# integrador-III

./: .gitignore  .nvim.lua  Cargo.toml  README.md  builder.Containerfile  dev.kdl  justfile  main.ipynb
.cargo/: config.toml
.ide/: config.kdl  plugins.lua
analytics/: .gitignore
analytics/.evidence/customization/: .profile.json
analytics/pages/: index.md
analytics/pages/metodologia/: diccionario-de-datos.md  ingenieria-de-datos.md
analytics/pages/resultados/: empleo.md
analytics/pages/teoria/: contexto-y-teoria.md
analytics/sources/warehouse/: connection.yaml  farm_operational_structure.sql  global_summary.sql  producer_gender.sql  sample_farms.sql
dataset-transformer/: Cargo.toml
dataset-transformer/src/: composite_key.rs  env.rs  farms.rs  main.rs  parcels.rs
dataset-transformer/src/mappings/: departments.rs  mod.rs
etl/: .dockerignore  .gitignore  Cargo.toml
etl/src/: dataframe.rs  env.rs  helpers.rs  lib.rs  loaders.rs  main.rs  saver.rs
etl/src/mappings/: gender.rs  mod.rs  municipality.rs  operational_structure.rs  principal_activity.rs
etl/src/pipelines/: dataset_join.rs  farms.rs  mod.rs  parcels.rs
etl/src/pipes/: composite_key.rs
etl/src/schema/: composite_key.rs  farms.rs  mod.rs  parcels.rs
infra/: .containerignore  builder.Containerfile  compiler.Containerfile  evidence.Containerfile  transformer.Containerfile
pipes/: ingest.py  main.ipynb  requirements.txt
queries/: duckdb-config.sql  test.sql
sql/: build-warehouse.sql  load-files.sql  load-tables.sql  test.sql
src/: main.rs
src/sql/: load-tables.sql
(+5 files in other folders)
