[package]
name = "pac"
version = "0.1.0"
edition = "2024"

[dependencies]
polars = { version="0.53.0", features =["lazy", "parquet", "dtype-u16"]}
serde = {version="1.0.228", features=["derive"]} 
serde_json = "1.0.149"

[profile.dev]
debug = 1
split-debuginfo = "unpacked"

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=mold"]
