[package]
name = "pac"
version = "0.1.0"
edition = "2024"

[dependencies]
polars = { version="0.53.0", features =["lazy", "parquet", "dtype-u16", "dtype-u8", "dtype-categorical", "strings", "replace"]}
serde = {version="1.0.228", features=["derive"]} 
serde_json = "1.0.149"
envy = "0.4.2"

[profile.dev]
debug = 1
split-debuginfo = "unpacked"

[profile.release]
opt-level = "z"     
lto = true           
codegen-units = 1    
panic = "abort"      
strip = true        

